<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_frame"
    tools:context=".ui.view.auth.LoginFragment">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="267dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Xin Chào!"
            android:textAlignment="center"
            android:textColor="@color/black_Bold"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Đăng nhập hoặc Tạo tài khoản"
            android:textAlignment="center"
            android:textColor="@color/gray_Text"
            android:textSize="17sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="336dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="Email"
            android:textColor="@color/black_Bold"
            android:textSize="17sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:id="@+id/loginEmail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="50dp"
            app:cardElevation="0dp">

            <EditText
                android:id="@+id/txtEmailInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:background="@android:color/transparent"
                android:hint="@string/email_input"
                android:textSize="15sp" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="Mật Khẩu"
            android:textColor="@color/black_Bold"
            android:textSize="17sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="50dp"
            app:cardElevation="0dp">

            <EditText
                android:id="@+id/txtPasswordInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:background="@android:color/transparent"
                android:hint="@string/password_input"
                android:inputType="textPassword"
                android:textSize="15sp" />

            <ImageButton
                android:id="@+id/btnShowPassword"
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_marginEnd="15dp"
                android:background="@android:color/transparent"
                android:scaleType="centerInside"
                android:src="@drawable/show_password_icon" />

            <ImageButton
                android:id="@+id/btnHidePassword"
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_marginEnd="15dp"
                android:background="@android:color/transparent"
                android:scaleType="centerInside"
                android:src="@drawable/hide_password_icon"
                android:visibility="invisible" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/btnForgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:text="@string/forgot_password"
            android:textColor="@color/gray_Text"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="336dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="450dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="40dp"
            android:backgroundTint="@color/blue_Light"
            app:cardCornerRadius="50dp"
            app:cardElevation="0dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sign_in"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="50dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:src="@drawable/google_logo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:text="@string/sign_in_with_google"
                    android:textSize="18sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="700dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ask_account"
            android:textColor="@color/gray_Text"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btnSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:text="@string/recommend_signup"
            android:textSize="12sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
