<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_frame"
    tools:context=".ui.view.auth.SignUpFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:backgroundTint="@android:color/transparent"
        app:cardCornerRadius="50dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@android:color/transparent"
            android:padding="15dp"
            android:scaleType="fitXY"
            android:src="@drawable/left_arrow_lvk" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Đăng Ký"
            android:textAlignment="center"
            android:textColor="@color/black_Bold"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Tạo Tài Khoản Để Mua Sắm Thỏa Thích!"
            android:textAlignment="center"
            android:textColor="@color/gray_Text"
            android:textSize="17sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="336dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="Tên Của Bạn"
            android:textColor="@color/black_Bold"
            android:textSize="17sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:id="@+id/signupName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="50dp"
            app:cardElevation="0dp">

            <EditText
                android:id="@+id/txtNameInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:background="@android:color/transparent"
                android:hint="@string/signup_name"
                android:textSize="15sp" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="Giới Tính"
            android:textColor="@color/black_Bold"
            android:textSize="17sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:id="@+id/signupGender"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="50dp"
            app:cardElevation="0dp">

            <Spinner
                android:id="@+id/spinnerGender"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:spinnerMode="dropdown" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_marginEnd="10dp"
                android:src="@drawable/baseline_arrow_drop_down_24" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="Email"
            android:textColor="@color/black_Bold"
            android:textSize="17sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:id="@+id/signupEmail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="50dp"
            app:cardElevation="0dp">

            <EditText
                android:id="@+id/txtEmailInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:background="@android:color/transparent"
                android:hint="@string/email_input"
                android:textSize="15sp" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="Mật Khẩu"
            android:textColor="@color/black_Bold"
            android:textSize="17sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:id="@+id/signupPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="50dp"
            app:cardElevation="0dp">

            <EditText
                android:id="@+id/txtPasswordInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:background="@android:color/transparent"
                android:hint="@string/password_input"
                android:inputType="textPassword"
                android:textSize="15sp" />

            <ImageButton
                android:id="@+id/btnShowPassword"
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_marginEnd="15dp"
                android:background="@android:color/transparent"
                android:scaleType="centerInside"
                android:src="@drawable/show_password_icon" />

            <ImageButton
                android:id="@+id/btnHidePassword"
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_marginEnd="15dp"
                android:background="@android:color/transparent"
                android:scaleType="centerInside"
                android:src="@drawable/hide_password_icon"
                android:visibility="invisible" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="336dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="590dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="@color/blue_Light"
            app:cardCornerRadius="50dp"
            app:cardElevation="0dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sign_up"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="700dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Đã Có Tài Khoản?"
            android:textColor="@color/gray_Text"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btnSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:text="Đăng Nhập"
            android:textSize="12sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>